tenzir/integration/data/reference/feather/test_additional_write_options/step_04.ref
error: Invalid: Unrecognized compression type: wrongname
 --> <input>:1:85
  |
1 | read zeek-tsv | batch 256 | write feather --compression-level -1 --compression-type wrongname | read feather
  |                                                                                     ^^^^^^^^^ 
  |
  = note: failed to parse compression type
  = note: must be `lz4` or `zstd`
  = note: failed to initialize printer